GOC-162: Definir un nuevo servicio externo para la recuperación de una lista de ROLES para un usuario
git-svn-id: http://jira.uji.es/repos/uji/GOC/goc/trunk@32005 e6edf6fb-f266-4316-afb4-e53d95876a76
